# fast_dl

./: .gitignore  CMakeLists.txt  FUTURE_WORK.md  Layer.cpp  Layer.hpp  Layers.hpp  LinearLayer.cpp  Makefile  MseLoss.cpp  Network.hpp  Optimizer.hpp  ParametricReLU.cpp  ParametricReLU.hpp  README.md  SigmoidLayer.cpp  SoftmaxCrossEntropyLoss.cpp  SoftmaxCrossEntropyLoss.hpp  deep-learning.md  test_layers.cpp  test_oop.cpp  test_train_mnist.cpp
include/dl/: DataLoader.hpp  LinearLayer.hpp  dl.hpp
include/dl/bench/: benchmark.hpp  benchmarks.hpp  cuda_utils.cuh
include/dl/core/: CudaUtils.hpp  DType.hpp  Device.hpp  Shape.hpp
include/dl/kernels/: activation.hpp  bias.hpp  cross_entropy.hpp  elementwise.hpp  gemm.hpp  kernels.hpp  layernorm.hpp  random.hpp  reduction.hpp  softmax.hpp  transpose.hpp  vector_add.hpp
include/dl/layers/: SigmoidLayer.hpp
include/dl/nn/: Linear.hpp  Module.hpp  ReLU.hpp  Sequential.hpp
include/dl/ops/: Activation.hpp  CrossEntropy.hpp  Elementwise.hpp  Gemm.hpp  LayerNorm.hpp  Linear.hpp  Matmul.hpp  OpUtils.hpp  Ops.hpp  Softmax.hpp
include/dl/tensor/: Tensor.hpp  TensorImpl.hpp
legacy/include/dl/ops/: MseLoss.hpp
legacy/src/optim/: Optimizer.cpp
legacy/src/runtime/: Network.cpp
scripts/: run_linux_benchmarks.sh
src/core/: CudaUtils.cpp  DType.cpp  Device.cpp  Shape.cpp
src/data/: DataLoader.cpp
src/kernels/cuda/: activation.cu  bias.cu  cross_entropy.cu  elementwise.cu  gemm.cu  layernorm.cu  random.cu  reduction.cu  softmax.cu  transpose.cu  vector_add.cu
src/nn/: Linear.cpp  ReLU.cpp  Sequential.cpp
src/ops/: Activation.cpp  CrossEntropy.cpp  Elementwise.cpp  LayerNorm.cpp  Layers.cpp  Linear.cpp  Matmul.cpp  OpUtils.cpp  Softmax.cpp
src/tensor/: Tensor.cpp  TensorImpl.cpp
tests/: test_network.cpp
tests/benchmarks/: main.cu
tests/benchmarks/gemm/: gemm_benchmark.cu
tests/benchmarks/reduction/: reduction_benchmark.cu
tests/benchmarks/softmax/: softmax_benchmark.cu
tests/benchmarks/transpose/: transpose_benchmark.cu
tests/benchmarks/vector_add/: vector_add_benchmark.cu
tests/nn/: custom_module_test.cpp  linear_init_test.cpp  linear_kaiming_init_test.cpp  linear_module_test.cpp  module_mode_test.cpp  relu_module_test.cpp  sequential_module_test.cpp
tests/tensor/: activation_tensor_test.cpp  cross_entropy_tensor_test.cpp  elementwise_tensor_test.cpp  layernorm_tensor_test.cpp  linear_tensor_test.cpp  matmul_tensor_test.cpp  softmax_tensor_test.cpp  tensor_copy_test.cpp  tensor_randn_test.cpp  tensor_uniform_test.cpp  test_tensor.cpp
